--- a/carbonia/requirements.txt
+++ b/carbonia/requirements.txt
@@ -5,6 +5,7 @@ annotated-types==0.7.0
 anyio==4.6.0
 asgiref==3.8.1
 attrs==24.2.0
+cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 colorama==0.4.6
@@ -12,7 +13,17 @@ dataclasses-json==0.6.7
 distro==1.9.0
 Django==5.1.1
 frozenlist==1.4.1
+google-api-core==2.21.0
+google-auth==2.35.0
+google-cloud-bigquery==3.26.0
+google-cloud-core==2.4.1
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
 greenlet==3.1.1
+grpcio==1.67.0
+grpcio-status==1.67.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
@@ -33,15 +44,22 @@ numpy==1.26.4
 openai==1.51.0
 orjson==3.10.7
 packaging==24.1
+proto-plus==1.24.0
+protobuf==5.28.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
 PyPDF2==3.0.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
 requests-toolbelt==1.0.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.35
 sqlparse==0.5.1
